--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "firebase": "^10.6.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "1.7.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0"
   },
