--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.5",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "^49.0.0",
     "expo-status-bar": "~1.6.0",
