--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "^1.19.5",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "^49.0.0",
+    "expo-location": "^16.3.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.6.0",
     "react": "18.2.0",
